fixed site being too big due to a bigger font size

--- a/css/style.scss
+++ b/css/style.scss
@@ -126,7 +126,7 @@ body {
     height: 100vh;
     margin-left: 10vw;
     margin-right: 10vw;
-    font-size: 1.7rem;
+    // font-size: 1.7rem;
   }
   
   .lead {
@@ -134,7 +134,6 @@ body {
     margin-right: 1rem;
     width: 49%;
     max-width: 50rem;
-    // width: 60rem;
     text-align: start;
     h1 {
       font-size: 4rem;
@@ -157,7 +156,7 @@ body {
   }
 
   .form {
-    height: 40rem;
+    // height: 40rem;
     justify-content: space-between;
     padding: 2rem;
   }
